--- a/index.html
+++ b/index.html
@@ -1,10 +1,54 @@
-Hola
-el primer
-repositorio
-en github
+<html>
+<!-- Esto es un comentario-->
+<head>
+    <title>Este es el título</title>
+    <meta charset="UTF-8">
+</head>
+
+<body>
+
+    <h1>
+        Es el formulario para vacunación COVID-19
+    </h1>
+
+    <form>
+        <p>
+            Nombre:
+            <input type="text" id="nombre" name="nombre">
+        </p>
+
+        <p>
+            Apellido:
+            <input type="text" id="Apellido" name="Apellido">
+        </p>
+
+        <p>
+            Sexo: Mujer<input type="radio" id= "sexo" name="sexo" value="F"> Hombre <input type="radio" id= "sexo" name="sexo" value="M">
+        </p>
+
+        <p>
+            Correo: <input type="text" >
+        </p>
+
+        <p>
+            Clave: <input type="password" >
+        </p>
 
 
-Esto es nuevo
+        <p><input type="checkbox" id="acepto" name="acepto">He leido y acepto....</p>
+            <a href="https://www.uninorte.edu.co/">Click aquí para ver los terminos</a>
+        <p>
+            <input type="submit" value="Enviar">
+        </p>
+    </form>
 
-otro mas
-Esta linea la hice en github
+    <p>
+
+        <a href="pagina2.html">ir a la página 2</a>
+
+    </p>
+
+</body>
+
+
+</html>
